--- a/src/output.css
+++ b/src/output.css
@@ -226,9 +226,6 @@
   }
 }
 @layer utilities {
-  .visible {
-    visibility: visible;
-  }
   .absolute {
     position: absolute;
   }
@@ -370,14 +367,14 @@
   .w-30 {
     width: calc(var(--spacing) * 30);
   }
-  .w-36 {
-    width: calc(var(--spacing) * 36);
+  .w-33 {
+    width: calc(var(--spacing) * 33);
   }
-  .w-38 {
-    width: calc(var(--spacing) * 38);
+  .w-35 {
+    width: calc(var(--spacing) * 35);
   }
-  .w-40 {
-    width: calc(var(--spacing) * 40);
+  .w-37 {
+    width: calc(var(--spacing) * 37);
   }
   .w-44 {
     width: calc(var(--spacing) * 44);
@@ -535,6 +532,9 @@
   }
   .self-start {
     align-self: flex-start;
+  }
+  .overflow-hidden {
+    overflow: hidden;
   }
   .overflow-x-auto {
     overflow-x: auto;
@@ -1516,7 +1516,6 @@
     display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: calc(var(--spacing) * 6);
-    padding-inline: calc(var(--spacing) * 4);
     @media (width >= 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
